--- a/GeoQuiz/app/src/main/res/layout/activity_cheat.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_cheat.xml
@@ -16,13 +16,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@+id/answer_text_view"
         android:padding="24dp"
-        tools:text="Answer"/>
+        android:id="@+id/answer_text_view" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/show_answer_button"/>
+        android:text="@string/show_answer_button"
+        android:id="@+id/show_answer_button"/>
 
 </LinearLayout>
