--- a/GeoQuiz/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_quiz.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.bignerdranch.andriod.geoquiz.QuizActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:id="@+id/question_text_view"/>
+        android:id="@+id/question_text_view"
+        tools:text="question"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:id="@+id/score_view"
+        tools:text="scoreboard" />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
