--- a/GeoQuiz/app/src/main/res/layout/activity_cheat.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_cheat.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:id="@+id/answer_text_view" />
+        android:id="@+id/answer_text_view"
+        android:freezesText="true" />
 
     <Button
         android:layout_width="wrap_content"
